--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,20 +1,26 @@
 version: '3'
 services:
-#  app:
-#    build: ./
-#    volumes:
-#      - ./:/app
-#    working_dir: /app
-#    ports:
-#      - 3000:3000
-#    command: yarn start
-##    links:
-##      - "mysql-server:ms"
-##      - "redis-server:rd"
-#    depends_on:
-#      - postgres
-#      - redis
-
+  #  app:
+  #    build: ./
+  #    volumes:
+  #      - ./:/app
+  #    working_dir: /app
+  #    ports:
+  #      - 3000:3000
+  #    command: yarn start
+  ##    links:
+  ##      - "mysql-server:ms"
+  ##      - "redis-server:rd"
+  #    depends_on:
+  #      - postgres
+  #      - redis
+  redix:
+    image: alash3al/redix
+    ports:
+      - 6543:6380
+      - 7090:7090
+    volumes:
+      - ./data/redix-data:/root/redix-data
   postgres:
     build: "./postgres"
     container_name: kvgw_postgres
