--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "",
   "private": true,
   "dependencies": {
+    "async": "^3.1.0",
+    "bip39": "^3.0.2",
     "co": "^4.6.0",
     "egg": "^2.22.2",
     "egg-alinode": "^2.0.1",
     "egg-cors": "^2.2.0",
+    "egg-mock": "^3.23.1",
     "egg-redis": "^2.4.0",
     "egg-router-plus": "^1.3.1",
     "egg-scripts": "^2.11.0",
@@ -15,12 +18,17 @@
     "egg-sequelize-auto": "^0.1.1",
     "egg-session-redis": "^2.1.0",
     "egg-validate": "^2.0.2",
+    "ethereumjs-util": "^6.1.0",
+    "ethereumjs-wallet": "^0.6.3",
+    "factory-girl": "^5.0.4",
     "fecha": "^3.0.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
     "pg": "^7.11.0",
     "qiniu": "^7.2.2",
+    "redis": "^2.8.0",
     "sequelize": "^5.9.4",
+    "util": "^0.12.1",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
