--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "private": true,
   "dependencies": {
     "async": "^3.1.0",
+    "axios": "^0.19.0",
+    "bcryptjs": "^2.4.3",
     "bip39": "^3.0.2",
     "co": "^4.6.0",
+    "dayjs": "^1.8.14",
+    "echarts": "^4.2.1",
     "egg": "^2.22.2",
     "egg-alinode": "^2.0.1",
     "egg-cors": "^2.2.0",
-    "egg-mock": "^3.23.1",
     "egg-redis": "^2.4.0",
     "egg-router-plus": "^1.3.1",
     "egg-scripts": "^2.11.0",
@@ -18,18 +21,26 @@
     "egg-sequelize-auto": "^0.1.1",
     "egg-session-redis": "^2.1.0",
     "egg-validate": "^2.0.2",
+    "element-ui": "^2.10.1",
     "ethereumjs-util": "^6.1.0",
     "ethereumjs-wallet": "^0.6.3",
-    "factory-girl": "^5.0.4",
     "fecha": "^3.0.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
+    "lru-cache": "^5.1.1",
+    "normalize.css": "^8.0.1",
+    "nprogress": "^0.2.0",
     "pg": "^7.11.0",
     "qiniu": "^7.2.2",
     "redis": "^2.8.0",
+    "rss-parser": "^3.7.2",
     "sequelize": "^5.9.4",
-    "util": "^0.12.1",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "v-charts": "^1.19.0",
+    "vue": "^2.6.10",
+    "vue-router": "^3.0.7",
+    "vuex": "^3.1.1",
+    "zstorage": "^1.0.10"
   },
   "devDependencies": {
     "autod": "^3.1.0",
